created section from wireframe

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,12 +14,13 @@
 }
 
 .jumbotron {
-  min-height: 100vh;
+  min-height: 90vh;
   background-color: grey;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url(https://www.dropbox.com/s/d4zbx4ime0hygft/pexels-josh-willink-701014.jpg?raw=1);
   padding: 10% 0 0 0;
+  margin: 0 0 20% 0;
 }
 
 .jumbotron * {
@@ -30,11 +31,26 @@
   font-weight: 800;
 }
 
-.jumbotron:hover a{
+.jumbotron:hover a,
+.btn:hover a{
   color: white;
+}
+
+.btn {
+  margin: 0;
+  padding: 0;
 }
 
 .darkBg {
   background-color: rgba(0,0,0,0.4);
   padding: 5rem;
+}
+
+.section {
+  min-height: 80vh;
+}
+
+.section video {
+  height: 40%;
+  width: auto;
 }
