--- a/src/styles.css
+++ b/src/styles.css
@@ -31,14 +31,8 @@
   font-weight: 800;
 }
 
-.jumbotron:hover a,
-.btn:hover a{
-  color: white;
-}
-
 .btn {
-  margin: 0;
-  padding: 0;
+  color: white !important;
 }
 
 .darkBg {
