added header onto bank list

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,8 +50,15 @@
 }
 
 .scrollBox {
-  height: 20vh;
-  margin: 0 0 2rem 0;
-  padding: 0 1rem 0 0;
+  height: 30vh;
   overflow-y: scroll;
+  margin: 0 0 5rem 0;
+}
+
+.bankListHeader {
+  font-weight: 800;
+  color: rgba(0, 0, 0, 0.54);
+  background-color: gainsboro;
+  padding: .5rem 1rem .5rem 1rem;
+  margin: 0 0 .5rem 0;
 }
