--- a/src/styles.css
+++ b/src/styles.css
@@ -62,3 +62,15 @@
   padding: .5rem 1rem .5rem 1rem;
   margin: 0 0 .5rem 0;
 }
+
+.cardGroup {
+  margin: 0 0 5rem 0;
+}
+
+.singleCard {
+  margin: 0 0 2rem 0;
+}
+
+.alignRight {
+  float: right;
+}
